# keycloak-collective-portal

./: .dockerignore  .drone.yml  .env.sample  Dockerfile  README.md  keycloak_collective_portal.py  makefile  pyproject.toml
keycloak_collective_portal/: config.py  dependencies.py  exceptions.py  keycloak.py  main.py  oidc.py  redis.py
keycloak_collective_portal/routes/: health.py  invite.py  oidc.py  register.py  root.py
keycloak_collective_portal/static/: default.css  lumbung.css
keycloak_collective_portal/templates/: admin.html  base.html  invalid.html  login.html  register.html  submit.html
templates/: admin.html  index.html  login.html  register.html
